[package]
name = "snake_wizard"
version = "0.1.0"
authors = ["okhsunrog <me@okhsunrog.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "snake_wizard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "alloc", "embassy-time-driver", "embassy-sync", "wake-from-isr"] }
edge-executor = "0.4"
bme280-rs = { version = "0.3.0", features = ["uom"] }
uom = "0.36"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-sync = "0.6"
anyhow = "1.0"

[build-dependencies]
embuild = "0.33"
